--- a/prakticka cast/TestovaniCastiKnihovny/TestovaniCastiKnihovny.csproj
+++ b/prakticka cast/TestovaniCastiKnihovny/TestovaniCastiKnihovny.csproj
@@ -70,6 +70,7 @@
     <Compile Include="GFX\PostavaGFXv2.cs" />
     <Compile Include="GFX\PostavaGFXv3.cs" />
     <Compile Include="GFX\PredmetGFX.cs" />
+    <Compile Include="GFX\VybaveniGFX.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Formy\VypisPostava.cs">
