--- a/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
+++ b/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
@@ -48,9 +48,13 @@
     <Compile Include="Hrac.cs" />
     <Compile Include="Exceptions\PostavaExceptions.cs" />
     <Compile Include="Inventar.cs" />
+    <Compile Include="InventarHmotnost.cs" />
+    <Compile Include="InventarV2.cs" />
+    <Compile Include="Konzumovatelne.cs" />
     <Compile Include="Postava.cs" />
     <Compile Include="Predmet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sebratelne.cs" />
     <Compile Include="Stat.cs" />
     <Compile Include="StatList.cs" />
     <Compile Include="Vybaveni.cs" />
