--- a/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
+++ b/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
@@ -45,15 +45,15 @@
     <Compile Include="Exceptions\StatExceptions.cs" />
     <Compile Include="Exceptions\StatListExceptions.cs" />
     <Compile Include="GameManagerDLL.cs" />
-    <Compile Include="inventare\has\InventarHmotnostV2.cs" />
+    <Compile Include="inventare\InventarHmotnostV2.cs" />
     <Compile Include="inventare\InventarPocet.cs" />
     <Compile Include="mapa\Chunk.cs" />
     <Compile Include="mapa\Lokace.cs" />
     <Compile Include="postavy\Hrac.cs" />
     <Compile Include="Exceptions\PostavaExceptions.cs" />
-    <Compile Include="inventare\is\Inventar.cs" />
-    <Compile Include="inventare\is\InventarHmotnost.cs" />
-    <Compile Include="inventare\has\InventarV2.cs" />
+    <Compile Include="inventare\legacy\Inventar.cs" />
+    <Compile Include="inventare\legacy\InventarHmotnost.cs" />
+    <Compile Include="inventare\InventarV2.cs" />
     <Compile Include="predmety\Konzumovatelne.cs" />
     <Compile Include="postavy\Postava.cs" />
     <Compile Include="predmety\Predmet.cs" />
