--- a/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
+++ b/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Buff.cs" />
     <Compile Include="Exceptions\StatExceptions.cs" />
     <Compile Include="Exceptions\StatListExceptions.cs" />
     <Compile Include="GameManagerDLL.cs" />
@@ -60,7 +61,9 @@
     <Compile Include="postavy\Postava.cs" />
     <Compile Include="predmety\Predmet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="predmety\Sebratelne.cs" />
+    <Compile Include="predmety\IPredmet.cs" />
+    <Compile Include="Quest.cs" />
+    <Compile Include="Skill.cs" />
     <Compile Include="staty\Stat.cs" />
     <Compile Include="staty\StatList.cs" />
     <Compile Include="predmety\Vybaveni.cs" />
