--- a/prakticka cast/TestovaniCastiKnihovny/TestovaniCastiKnihovny.csproj
+++ b/prakticka cast/TestovaniCastiKnihovny/TestovaniCastiKnihovny.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="compose\inventare\InventarGridKomp.cs" />
@@ -94,6 +95,12 @@
     <Compile Include="Formy\MapaForm.Designer.cs">
       <DependentUpon>MapaForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formy\NastaveniForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formy\NastaveniForm.Designer.cs">
+      <DependentUpon>NastaveniForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formy\UkolForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +118,8 @@
     <Compile Include="grafika\UI.cs" />
     <Compile Include="grafika\UIGrid.cs" />
     <Compile Include="grafika\UIVypis.cs" />
+    <Compile Include="nastaveni\NastaveniGrafika.cs" />
+    <Compile Include="nastaveni\NastaveniOvladani.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Formy\VypisPostava.cs">
@@ -136,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formy\MapaForm.resx">
       <DependentUpon>MapaForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formy\NastaveniForm.resx">
+      <DependentUpon>NastaveniForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formy\UkolForm.resx">
       <DependentUpon>UkolForm.cs</DependentUpon>
