--- a/prakticka cast/TestovaniCastiKnihovny/TestovaniCastiKnihovny.csproj
+++ b/prakticka cast/TestovaniCastiKnihovny/TestovaniCastiKnihovny.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Formy\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formy\GMMapaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formy\GMMapaForm.Designer.cs">
+      <DependentUpon>GMMapaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formy\GMPostavyForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formy\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formy\GMMapaForm.resx">
+      <DependentUpon>GMMapaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formy\GMPostavyForm.resx">
       <DependentUpon>GMPostavyForm.cs</DependentUpon>
