--- a/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
+++ b/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
@@ -79,5 +79,13 @@
     <Compile Include="Ukoly\UkolPolozka.cs" />
     <Compile Include="Ulozeni.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="UML\Legacy_invent.cd" />
+    <None Include="UML\UML_Buffy.cd" />
+    <None Include="UML\UML_inventy.cd" />
+    <None Include="UML\UML_Postavy.cd" />
+    <None Include="UML\UML_predmety.cd" />
+    <None Include="UML\UML_Staty.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
