--- a/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
+++ b/prakticka cast/KnihovnaRPG/KnihovnaRPG.csproj
@@ -49,7 +49,7 @@
     <Compile Include="GameManagerDLL.cs" />
     <Compile Include="mapa\LoadUnloadEventArg.cs" />
     <Compile Include="nastaveni\INastaveni.cs" />
-    <Compile Include="inventare\InventarHmotnostV2.cs" />
+    <Compile Include="inventare\InventarHmotnost.cs" />
     <Compile Include="inventare\InventarPocet.cs" />
     <Compile Include="Kouzla\KouzloBuff.cs" />
     <Compile Include="Kouzla\KouzloLeceni.cs" />
@@ -62,7 +62,7 @@
     <Compile Include="Exceptions\PostavaExceptions.cs" />
     <Compile Include="inventare\legacy\Inventar.cs" />
     <Compile Include="inventare\legacy\InventarHmotnost.cs" />
-    <Compile Include="inventare\InventarV2.cs" />
+    <Compile Include="inventare\Inventar.cs" />
     <Compile Include="predmety\Konzumovatelne.cs" />
     <Compile Include="postavy\Postava.cs" />
     <Compile Include="predmety\Predmet.cs" />
